# xsimonad

./: LICENSE  Makefile  README.md  stack.yaml  xsimonad.cabal
configs/: i3status.conf  termite.conf  xbindkeysrc
src/: Xmonad.hs
