name:                xsimonad
version:             0.1.0.0
synopsis:            My XMonad configuration
description:         My XMonad configuration
homepage:            https://github.com/sshine/xsimonad#readme
license:             BSD3
license-file:        LICENSE
author:              Simon Shine
maintainer:          shreddedglory@gmail.com
copyright:           Copyright 2017 Simon Shine
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable xmonad
  hs-source-dirs:      src
  main-is:             Xmonad.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , xmonad >= 0.12
                     , xmonad-contrib >= 0.12
                     , data-default >= 0.7
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sshine/xsimonad
